Добавил центровку для блока iStore, исправил выравнивание команды

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <div class="team_h2">
                     <h2>Наша команда</h2>
                 </div>
-                <div class="teams">
+                <div class="teams main-row">
                     <div class="team_main">
                         <div><img src="resurse/anton.svg" alt="Anton"></div>
                         <div>
@@ -619,7 +619,7 @@
                 </div>
 
                 <div class="cases">
-                    <div class="case_item">
+                    <div class="case_item" class="istore-case">
                         <div class="case">
                             <div class="case_info">
                                 <h3>I-store</h3>
