--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="resurse/BoomSmm.svg" alt="logo">
+            <a href="index.html"><img src="resurse/BoomSmm.svg" alt="logo"></a>
         </div>
 
         <nav class='headerNav'>
@@ -1442,7 +1442,7 @@
 
     <footer>
         <div class="footer_nav">
-            <div><img src="resurse/BoomSmm_w.svg" alt="BoomSmm"></div>
+            <div><a href="index.html"><img src="resurse/BoomSmm_w.svg" alt="BoomSmm"></a></div>
 
             <nav>
                 <ul>
