--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
 
                         <div id="tags">
-                            <img src="boomsmm-site/resurse/tags1.svg" alt="tags">
+                            <img src="boomsmm-site../resurse/tags1.svg" alt="tags">
                         </div>
 
                         <div class="hero_content">
