--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="resurse/BoomSmm.svg" alt="logo"></a>
+            <a href="index.html"><img src="resurse/BoomSmm.png" alt="logo"></a>
         </div>
 
         <nav class='headerNav'>
@@ -24,8 +24,8 @@
         </nav>
 
         <div class="media">
-           <a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.svg" alt="telegram"></a>
-           <a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.svg" alt="Instagram"></a>
+           <a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a>
+           <a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.png" alt="Instagram"></a>
         </div>
 
         <div class="phone">
@@ -42,8 +42,8 @@
                 <li><a class="menu__item" href="#Target">Настройка таргет</a></li>
                 <li><a class="menu__item" href="#Instagram">Ведение инстаграма</a></li>
                 <li><a class="menu__item" href="#Contacts">Контакты</a></li>
-                <li><a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.svg" alt="telegram"></a></li>
-                <li><a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.svg" alt="Instagram"></a></li>
+                <li><a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a></li>
+                <li><a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.png" alt="Instagram"></a></li>
                 <li><p><a a href="tel:+375447700288" id="phone">+375 44 770 02 88</a></p></li>
             </ul>
         </div>
@@ -62,21 +62,21 @@
                         </div>
 
                         <div id="tags">
-                            <img src="../resurse/tags1.svg" alt="tags">
+                            <img src="resurse/tags1.png" alt="tags">
                         </div>
 
                         <div class="hero_content">
                             <button class="telegram_button">
-                                <p>Спросить в Telegram</p> <img src="resurse/tg_w.svg" alt="telegram">
+                                <p>Спросить в Telegram</p> <img src="resurse/tg_w.png" alt="telegram">
                             </button>
                         </div>
                         <div class="hero_image">
-                            <img src="resurse/elepfent.svg" alt="Pink Elephant">
+                            <img src="resurse/elephant.png" alt="Pink Elephant">
                         </div>
                         </div>
 
                         <div class="tags">
-                            <img src="resurse/tags1.svg" alt="tags">
+                            <img src="resurse/tags1.png" alt="tags">
                         </div>
                 </div>
             </div>
@@ -162,17 +162,17 @@
 
                 <div>
                     <ul>
-                        <li><img src="resurse/target.svg" alt="target">  Запуск и ведение таргетированной рекламы</li>
-                        <li><img src="resurse/inst_mini.svg" alt="intagram">  Ведение бизнес-аккаунтов в instagram «под ключ»</li>
-                        <li><img src="resurse/reels.svg" alt="reels">  Производство коммерческого фото- и видеоконтента</li>
-                        <li><img src="resurse/vidio.svg" alt="vidio">  Съёмка и монтаж для reels и lifestyle видео</li>
-                        <li><img src="resurse/puzzle.svg" alt="puzzle">  Брендинг и создание графических материалов</li>
-                        <li><img src="resurse/diagram.svg" alt="diagram">  Отдел маркетинга на аутсорс</li>
+                        <li><img src="resurse/target.png" alt="target">  Запуск и ведение таргетированной рекламы</li>
+                        <li><img src="resurse/inst_mini.png" alt="intagram">  Ведение бизнес-аккаунтов в instagram «под ключ»</li>
+                        <li><img src="resurse/reels.png" alt="reels">  Производство коммерческого фото- и видеоконтента</li>
+                        <li><img src="resurse/vidio.png" alt="vidio">  Съёмка и монтаж для reels и lifestyle видео</li>
+                        <li><img src="resurse/puzzle.png" alt="puzzle">  Брендинг и создание графических материалов</li>
+                        <li><img src="resurse/diagram.png" alt="diagram">  Отдел маркетинга на аутсорс</li>
                     </ul>
                 </div>
 
                 <div id="BoomSmm_big">
-                    <img src="resurse/BoomSmm_big.svg" alt="BoomSMM">
+                    <img src="resurse/BoomSmm_big.png" alt="BoomSMM">
                 </div>
             </div>
         </section>
@@ -335,7 +335,7 @@
                 </div>
                 <div class="teams main-row">
                     <div class="team_main">
-                        <div><img src="resurse/anton.svg" alt="Anton"></div>
+                        <div><img src="resurse/anton.png" alt="Anton"></div>
                         <div>
                             <h3>Антон</h3>
                             <p class="position">CEO & Founder</p>
@@ -352,7 +352,7 @@
                 <div class="teams" id="teams">
                     
                     <div>
-                        <img src="resurse/veronika.svg" alt="Veronika">
+                        <img src="resurse/veronika.png" alt="Veronika">
                         <h3>Вероника</h3>
                         <p class="position">Web & Graphic Designer</p>
                         <p>в графическом <br>
@@ -361,7 +361,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="resurse/sofia.svg" alt="Sofia">
+                        <img src="resurse/sofia.png" alt="Sofia">
                         <h3>София</h3>
                         <p class="position">SMM-specialist</p>
                         <p>в интернет-маркетинге <br>
@@ -370,14 +370,14 @@
                         </p>
                     </div>
                     <div>
-                        <img src="resurse/varvara.svg" alt="Varvara">
+                        <img src="resurse/varvara.png" alt="Varvara">
                         <h3>Варвара</h3>
                         <p class="position">SMM-specialist</p>
                         <p>в интернет-маркетинге <br>2 года<br><br>
                             Политехнический колледж «Маркетинговая деятельность»</p>
                     </div>
                     <div>
-                        <img src="resurse/sergey.svg" alt="Sergey">
+                        <img src="resurse/sergey.png" alt="Sergey">
                         <h3>Сергей</h3>
                         <p class="position">Video & Animation</p>
                         <p>в коммерческой видеосъемке <br>15 лет</p>
@@ -444,19 +444,19 @@
 
                     <div class="insta_row">
                         <div class="insta_client">
-                            <img src="resurse/lin_school.svg" alt="Школа иностранных языков">
+                            <img src="resurse/lin_school.png" alt="Школа иностранных языков">
                             <p>Школа иностранных языков</p>
                         </div>
                         <div class="insta_client">
-                            <img src="resurse/vsebalans.svg" alt="Сервис доставки рациона готового питания">
+                            <img src="resurse/vsebalans.png" alt="Сервис доставки рациона готового питания">
                             <p>Сервис доставки рациона готового питания</p>
                         </div>
                         <div class="insta_client">
-                            <img src="resurse/kakumama.svg" alt="Сервис доставки готовой еды">
+                            <img src="resurse/kakumama.png" alt="Сервис доставки готовой еды">
                             <p>Сервис доставки готового питания</p>
                         </div>
                         <div class="insta_client">
-                            <img src="resurse/uhaupetuha.svg" alt="Сеть кулинарных лавок">
+                            <img src="resurse/uhaupetuha.png" alt="Сеть кулинарных лавок">
                             <p>Сеть кулинарных лавок</p>
                         </div>
                     </div>
