--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <a href="index.html"><img src="resurse/BoomSmm.png" alt="logo"></a>
+        <div class="logo" id="logo">
+            <a href="#logo"><img src="resurse/BoomSmm.png" alt="logo"></a>
         </div>
 
         <nav class='headerNav'>
@@ -1441,7 +1441,7 @@
 
     <footer>
         <div class="footer_nav">
-            <div><a href="index.html"><img src="resurse/BoomSmm_w.png" alt="BoomSmm"></a></div>
+            <div><a href="#logo"><img src="resurse/BoomSmm_w.png" alt="BoomSmm"></a></div>
 
             <nav>
                 <ul>
