--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <li><a class="menu__item" href="#Target">Настройка таргет</a></li>
                 <li><a class="menu__item" href="#Instagram">Ведение инстаграма</a></li>
                 <li><a class="menu__item" href="#Contacts">Контакты</a></li>
-                <li><a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a></li>
+                <li id="tg"><a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a></li>
                 <li><a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.png" alt="Instagram"></a></li>
-                <li><p><a a href="tel:+375447700288" id="phone">+375 44 770 02 88</a></p></li>
+                <li><p id="phone"><a a href="tel:+375447700288" id="phone">+375 44 770 02 88</a></p></li>
             </ul>
         </div>
     </header>
@@ -188,20 +188,7 @@
                     <div class="Reviews_block">
                         <div class="Reviews_img"><img src="resurse/game.png" alt="Game"></div>
                         <div class="Reviews_list">
-                            <p>Сотрудничали с агентством по<br>
-                            рекомендации. Была поставлена задача по<br>
-                            созданию страницы настольной игры <br>
-                            «Футбольный чемпионат» в instagram для<br> 
-                            выхода на рынок других стран, её<br> 
-                            оформлению, упаковке и регулярном<br>
-                            размещении актуального контента. <br><br>
-                            Позже – запуск таргетированной рекламы на<br> 
-                            Беларусь и Казахстан, созданию таплинка<br>
-                                и проведению небольших видеосъёмок. <br>
-                                Хотелось бы отметить системность, внимание<br> 
-                                к мелочам и ответственность в работе. <br><br>
-                                Услуга оказывалась «под ключ» <br>
-                                с моим минимальным вовлечением.</p>
+                            <p>Сотрудничали с агентством по рекомендации. Была поставлена задача по созданию страницы настольной игры «Футбольный чемпионат» в instagram для выхода на рынок других стран, её оформлению, упаковке и регулярном размещении актуального контента. Позже – запуск таргетированной рекламы на Беларусь и Казахстан, созданию таплинка и проведению небольших видеосъёмок. Хотелось бы отметить системность, внимание к мелочам и ответственность в работе. Услуга оказывалась «под ключ» с моим минимальным вовлечением.</p>
                                 <h3>Михаил Мысин</h3>
                                 <p class="professions">Создатель настольной игры</p>
                         </div>
@@ -210,22 +197,7 @@
                     <div class="Reviews_block">
                         <div class="Reviews_img"><img src="resurse/coach.png" alt="coach"></div>
                         <div class="Reviews_list">
-                            <p>Сотрудничал по ряду проектов с Антоном <br>
-                                и его агентством: редизайн сайта, оформление<br> 
-                                аккаунта в instagram, создание презентаций<br> 
-                                для клиентов. Из сильных сторон – его <br>
-                                огромный профессиональный опыт <br>
-                                в качестве маркетолога и дизайнера, <br>
-                                порядочность, умение выполнять работу <br>
-                                в сжатые сроки. <br>
-                                В последствии обратился за комплексным <br>
-                                маркетингом для запуска филиала <br>
-                                международного образовательного центра. <br>
-                                В кратчайшие сроки создан сайт, <br>
-                                организована успешная работа в Instagram. <br>
-                                Мы получили надёжного партнёра <br>
-                                по маркетингу в сложнейший период <br>
-                                запуска!</p>
+                            <p>Сотрудничал по ряду проектов с Антоном и его агентством: редизайн сайта, оформление аккаунта в instagram, создание презентаций для клиентов. Из сильных сторон – его огромный профессиональный опыт в качестве маркетолога и дизайнера, порядочность, умение выполнять работу в сжатые сроки. В последствии обратился за комплексным маркетингом для запуска филиала международного образовательного центра. В кратчайшие сроки создан сайт, организована успешная работа в Instagram. Мы получили надёжного партнёра по маркетингу в сложнейший период запуска!</p>
                                 <h3>Анатолий Полевода</h3>
                                 <p class="professions">Бизнес-тренер, партнёр MetaLeaderMinsk</p>
                         </div>
@@ -234,19 +206,7 @@
                     <div class="Reviews_block">
                         <div class="Reviews_img"><img src="resurse/candle.png" alt="candle"></div>
                         <div class="Reviews_list">
-                            <p>Мы занимаемся производством и продажей <br>
-                                свечей, проведением мастер-классов по их<br> 
-                                изготовлению. Обратились в агентство <br>
-                                за доработкой сайта на конструкторе Tilda.<br>
-                                Требовалось продумать и изменить <br>
-                                структуру, добавить новые страницы <br>
-                                и подключить формы получения заявок <br>
-                                в Telegram. Работы выполнялись <br>
-                                на протяжении одной недели. С нашей стороны <br>
-                                потребовалось потратить минимум времени <br>
-                                для проверки и согласования полученного <br>
-                                результата. Если вам нужно вдохнуть новую <br>
-                                жизнь в ваш сайт – рекомендую.</p>
+                            <p>Мы занимаемся производством и продажей свечей, проведением мастер-классов по их изготовлению. Обратились в агентство за доработкой сайта на конструкторе Tilda. Требовалось продумать и изменить структуру, добавить новые страницы и подключить формы получения заявок в Telegram. Работы выполнялись на протяжении одной недели. С нашей стороны потребовалось потратить минимум времени для проверки и согласования полученного результата. Если вам нужно вдохнуть новую жизнь в ваш сайт – рекомендую.</p>
                                 <h3>Татьяна Шапчиц</h3>
                                 <p class="professions">Основатель 4SOUL</p>
                         </div>
@@ -336,7 +296,7 @@
                 <div class="teams main-row">
                     <div class="team_main">
                         <div><img src="resurse/anton.png" alt="Anton"></div>
-                        <div>
+                        <div class="main_text">
                             <h3>Антон</h3>
                             <p class="position">CEO & Founder</p>
                             <p>в маркетинге 12 лет <br>
@@ -789,6 +749,7 @@
                             </div>
                         </div>
                         <div class="examples">
+                            <div>
                                 <h2>Было</h2>
                             </div>
                             
