--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </section>
 
         <section>
-        <div class="container">
+        <div class="container2">
             <div class="Reels">
                 <div class="Reels_item">
                     <iframe src="https://www.instagram.com/reel/DOL4SXpCPwH/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" frameborder="0" allowfullscreen></iframe>
