--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BoomSMM</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_mobile.css">
-    <link rel="icon" href="resurse/favicon.svg" type="image/x-icon">
+    <link rel="icon" href="resurse/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
