--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@
         
     </footer>
 
-    <button id="backToTop" aria-label="Вернуться наверх">🡅</button>
+    <button id="backToTop" aria-label="Вернуться наверх"><img src="resurse/arrow_up.png"></button>
 
 
     <script src="script.js"></script>
