--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
         <nav class='headerNav'>
             <ul>
                 <li><a href="#About_us">О нас</a></li>
-                <li><a href="#Target">Настройка таргет</a></li>
-                <li><a href="#Instagram">Ведение инстаграма</a></li>
+                <li><a href="#Target">Настройка таргета</a></li>
+                <li><a href="#Instagram">Ведение instagram</a></li>
+                <li><a href="#Price">Стоимость</a></li>
                 <li><a href="#Contacts">Контакты</a></li>
             </ul>
         </nav>
 
         <div class="media">
-           <a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a>
-           <a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.png" alt="Instagram"></a>
+           <a href="https://t.me/brat_anton" target="_blank" class="icon"><img src="resurse/tg_w.png" alt="telegram"></a>
+           <a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank" class="icon"><img src="resurse/insta.png" alt="Instagram"></a>
         </div>
 
         <div class="phone">
@@ -39,8 +40,9 @@
             </label>
             <ul class="menu__box">
                 <li><a class="menu__item" href="#About_us">О нас</a></li>
-                <li><a class="menu__item" href="#Target">Настройка таргет</a></li>
-                <li><a class="menu__item" href="#Instagram">Ведение инстаграма</a></li>
+                <li><a class="menu__item" href="#Target">Настройка таргета</a></li>
+                <li><a class="menu__item" href="#Instagram">Ведение instagram</a></li>
+                <li><a class="menu__item" href="#Price">Стоимость</a></li>
                 <li><a class="menu__item" href="#Contacts">Контакты</a></li>
                 <li id="tg"><a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a></li>
                 <li><a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.png" alt="Instagram"></a></li>
@@ -483,44 +485,6 @@
                         <button class="trust_dot" data-index="2" aria-label="Слайд 3"></button>
                         <button class="trust_dot" data-index="3" aria-label="Слайд 4"></button>
                     </div>
-                </div>
-
-
-                <div class="price">
-                    <div class="info_cost">
-                        <h2>ТАРГЕТИРОВАННАЯ РЕКЛАМА</h2>
-                        <p>в месяц</p>
-                        <h2>790 BYN</h2>
-                        <ul>
-                            <li>брифинг и проработка рекламной концепции</li>
-                            <li>монтаж креативов из ваших исходных видеоматериалов</li>
-                            <li>создание графических баннеров</li>
-                            <li>запуск рекламы: настройка в кабинете бизнес-аккаунта facebook+instagram</li>
-                            <li>ведение и контроль</li>
-                            <li>регулярно заполняемая таблица эффективности</li>
-                            <li>работа над оптимизацией бюджета</li>
-                            <li>обновление креативов</li>
-                            <li>тестирование гипотез</li>
-                        </ul>
-                    </div>
-
-                    <div class="info_cost">
-                        <h2>ТАРГЕТИРОВАННАЯ РЕКЛАМА + Видеосъёмка</h2>
-                        <p>в месяц</p>
-                        <h2>1040 BYN</h2>
-                        <ul>
-                            <li>брифинг и проработка рекламной концепции, </li>
-                            <li>подбор идей и проведение видеосъемки</li>
-                            <li>монтаж креативов из полученных материалов</li>
-                            <li>создание графических баннеров</li>
-                            <li>запуск рекламы: настройка в кабинете бизнес-аккаунта facebook+instagram</li>
-                            <li>ведение и контроль</li>
-                            <li>регулярно заполняемая таблица эффективности</li>
-                            <li>работа над оптимизацией бюджета</li>
-                            <li>обновление креативов и тестирование гипотез</li>
-                        </ul>
-                    </div>
-
                 </div>
 
                 <div class="price_button">
@@ -1288,35 +1252,34 @@
             </div>
         </section>
 
-        <section>
+        <section id="Price">
             <div class="price_inst_key">
                 <div>
-                    <h3>Прайс по ведению Instagram «под ключ»</h3>
+                    <h3>Прайс</h3>
                 </div>
 
                 <div class="price_inst">
                     <div class="price_inst_info">
-                        <h4>Быстрый старт</h4>
+                        <h2>Таргетированная реклама</h2>
                         <p>в месяц</p>
-                        <h4>990 BYN </h4>
+                        <h2>690 BYN</h2>
                         <ul>
-                            <li>8 reels</li>
-                            <li>+ 4 карусели</li>
-                            <li>+ 30 stories</li>
-                            <li>+ 2 часа видеосъемки</li>
-                            <li>брифинг и анализ конкурентов</li>
-                            <li>составление контент-плана и стратегии</li>
-                            <li>оформление аккаунта дизайнером</li>
-                            <li>общение с пользователями</li>
-                            <li>рабочий чат проекта в Telegram</li>
+                            <li>брифинг и проработка рекламной концепции</li>
+                            <li>монтаж креативов из ваших исходных видеоматериалов</li>
+                            <li>создание графических баннеров</li>
+                            <li>запуск рекламы: настройка в кабинете бизнес-аккаунта facebook+instagram</li>
+                            <li>ведение и контроль</li>
+                            <li>регулярно заполняемая таблица эффективности</li>
+                            <li>работа над оптимизацией бюджета</li>
+                            <li>обновление креативов</li>
+                            <li>тестирование гипотез</li>
                         </ul>
-                        <p class="plus_info">+ таргетированная реклама «под ключ»</p>
                     </div>
 
                     <div class="price_inst_info">
-                        <h4>Стандарт</h4>
+                        <h4>Instagram «под ключ»</h4>
                         <p>в месяц</p>
-                        <h4>1290 BYN </h4>
+                        <h4>1590 BYN </h4>
                         <ul>
                             <li>12 reels</li>
                             <li>+ 6 карусели</li>
@@ -1332,21 +1295,15 @@
                     </div>
 
                     <div class="price_inst_info">
-                        <h4>Партнёр</h4>
-                        <p>в месяц</p>
-                        <h4>1590 BYN </h4>
+                        <h4>Дополнительная видеосъёмка</h4>
+                        <h4>190 BYN/час</h4>
                         <ul>
-                            <li>до 20 reels</li>
-                            <li>+ 8 карусели</li>
-                            <li>+ 70 stories</li>
-                            <li>+ 4 часа видеосъемки</li>
-                            <li>брифинг и анализ конкурентов</li>
-                            <li>составление контент-плана и стратегии</li>
-                            <li>оформление аккаунта дизайнером</li>
-                            <li>общение с пользователями</li>
-                            <li>рабочий чат проекта в Telegram</li>
+                            <li>на проф. оборудовании</li>
+                            <li>подготовка референсов</li>
+                            <li>написание сценариев</li>
+                            <li>помощь в подборе моделей и студии</li>
+                            <li>бмонтаж</li>
                         </ul>
-                        <p class="plus_info">+ таргетированная реклама «под ключ»</p>
                     </div>
                 </div>
 
@@ -1395,8 +1352,9 @@
             <nav>
                 <ul>
                     <li><a href="#About_us">О нас</a></li>
-                    <li><a href="#Target">Таргет</a></li>
-                    <li><a href="#Instagram">Инстаграм</a></li>
+                    <li><a href="#Target">Настройка таргета</a></li>
+                    <li><a href="#Instagram">Ведение instagram</a></li>
+                    <li><a href="#Price">Стоимость</a></li>
                     <li><a href="#Contacts">Контакты</a></li>
                 </ul>
             </nav>
