--- a/index.html
+++ b/index.html
@@ -364,6 +364,12 @@
                         <p class="position">Video & Animation</p>
                         <p>в коммерческой видеосъемке <br>15 лет</p>
                     </div>
+                    <div>
+                        <img src="resurse/evgeniy.png" alt="Evgeniy">
+                        <h3>Сергей</h3>
+                        <p class="position">Video & Animation</p>
+                        <p>в коммерческой видеосъемке <br>17 лет</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -1260,26 +1266,23 @@
 
                 <div class="price_inst">
                     <div class="price_inst_info">
-                        <h2>Таргетированная реклама</h2>
-                        <p>в месяц</p>
-                        <h2>690 BYN</h2>
+                        <h3>Таргетированная реклама</h3>
+                        <h3>690 BYN / в месяц</h3>
                         <ul>
-                            <li>брифинг и проработка рекламной концепции</li>
                             <li>монтаж креативов из ваших исходных видеоматериалов</li>
                             <li>создание графических баннеров</li>
-                            <li>запуск рекламы: настройка в кабинете бизнес-аккаунта facebook+instagram</li>
+                            <li>запуск рекламы: настройка в рекламном кабинете Facebook</li>
                             <li>ведение и контроль</li>
                             <li>регулярно заполняемая таблица эффективности</li>
                             <li>работа над оптимизацией бюджета</li>
-                            <li>обновление креативов</li>
-                            <li>тестирование гипотез</li>
+                            <li>обновление креативов тестирование гипотез  </li>
                         </ul>
+                        <p class="plus_info">Возможна доп. видеосъёмка</p>
                     </div>
 
                     <div class="price_inst_info">
-                        <h4>Instagram «под ключ»</h4>
-                        <p>в месяц</p>
-                        <h4>1590 BYN </h4>
+                        <h3>Instagram «под ключ»</h3>
+                        <h3>1590 BYN / в месяц</h3>
                         <ul>
                             <li>12 reels</li>
                             <li>+ 6 карусели</li>
@@ -1295,15 +1298,16 @@
                     </div>
 
                     <div class="price_inst_info">
-                        <h4>Дополнительная видеосъёмка</h4>
-                        <h4>190 BYN/час</h4>
+                        <h3>Дополнительная видеосъёмка</h3>
+                        <h3>190 BYN / час</h3>
                         <ul>
                             <li>на проф. оборудовании</li>
                             <li>подготовка референсов</li>
                             <li>написание сценариев</li>
                             <li>помощь в подборе моделей и студии</li>
-                            <li>бмонтаж</li>
+                            <li>монтаж включен</li>
                         </ul>
+                        <p class="plus_info">Возможна работа с анимацией и ИИ, озвучка диктором</p>
                     </div>
                 </div>
 
