--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                 <li><a class="menu__item" href="#Instagram">Ведение instagram</a></li>
                 <li><a class="menu__item" href="#Price">Стоимость</a></li>
                 <li><a class="menu__item" href="#Contacts">Контакты</a></li>
-                <li id="tg"><a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a></li>
-                <li><a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.png" alt="Instagram"></a></li>
+                <li id="tg"><a href="https://t.me/brat_anton" target="_blank"><img src="resurse/tg_w.png" alt="telegram"></a> 
+                <a href="https://www.instagram.com/boomsmm.by?igsh=MWIwa2Fkd2lrdmdpaw==" target="_blank"><img src="resurse/insta.png" alt="Instagram"></a></li>
                 <li><p id="phone"><a a href="tel:+375447700288" id="phone">+375 44 770 02 88</a></p></li>
+                <li id="logo_menu"><img src="resurse/BoomSmm.png"></li>
             </ul>
         </div>
     </header>
