Добавлена новая фича

--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
                 </div>
                 <div class="container">
                     <div>
-                        <div class="hero_content"> 
-                            <p>Маркетинг в Instagram <br> для роста продаж</p>
-                        </div>
 
                         <div id="tags">
                             <img src="resurse/tags1.png" alt="tags">
@@ -378,14 +375,14 @@
         <section>
             <div class="team">
                 <div  class="backstage">
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
+                    <div class="back-item"><img src="resurse/2back.jpg" alt=""></div>
+                    <div class="back-item"><img src="resurse/7back.jpg" alt=""></div>
+                    <div class="back-item"><img src="resurse/3back.jpg" alt=""></div>
+                    <div class="back-item"><img src="resurse/8back.jpg" alt=""></div>
+                    <div class="back-item"><img src="resurse/5back.jpg" alt=""></div>
+                    <div class="back-item"><img src="resurse/6back.jpg" alt=""></div>
+                    <div class="back-item"><img src="resurse/4back.jpg" alt=""></div>
+                    <div class="back-item"><img src="resurse/1back.jpg" alt=""></div>
                 </div>
             </div>
         </section>
@@ -1352,7 +1349,7 @@
 
     <footer>
         <div class="footer_nav">
-            <div><a href="#logo"><img src="resurse/BoomSmm_w.png" alt="BoomSmm"></a></div>
+            <div><a href="#logo"><img src="resurse/BoomSmm.png" alt="BoomSmm"></a></div>
 
             <nav>
                 <ul>
