--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     </div>
                     <div>
                         <img src="resurse/evgeniy.png" alt="Evgeniy">
-                        <h3>Сергей</h3>
+                        <h3>Евгений</h3>
                         <p class="position">Video & Animation</p>
                         <p>в коммерческой видеосъемке <br>17 лет</p>
                     </div>
